[gd_scene load_steps=14 format=3 uid="uid://b7jh3ypa2rla3"]

[ext_resource type="Script" path="res://Scripts/audio_manager.gd" id="1_y6pe1"]
[ext_resource type="AudioStream" uid="uid://db7ob0n77b5ad" path="res://SFX/Musics/Jason_Locatelli_Discovery.mp3" id="2_yhoks"]
[ext_resource type="AudioStream" uid="uid://kembhejg6sio" path="res://SFX/Musics/Jason_Locatelli_Discovery_Underwater.mp3" id="3_4yr6x"]
[ext_resource type="AudioStream" uid="uid://dt7nbtyxlthr" path="res://SFX/Musics/underwater-19568.mp3" id="4_3f04n"]
[ext_resource type="AudioStream" uid="uid://1rypwssqrpbp" path="res://SFX/Musics/Jason_Locatelli_Discovery_Shop.mp3" id="4_qlbh4"]
[ext_resource type="AudioStream" uid="uid://bi7acb3cr7sij" path="res://SFX/Sounds/343462__rocotilos__real-coin-drop.mp3" id="5_0omb1"]
[ext_resource type="AudioStream" uid="uid://drtc17p77whxl" path="res://SFX/Sounds/288899__petebuchwald__rocky-mountain-outdoors-wind-and-birds.mp3" id="7_cdd1e"]
[ext_resource type="AudioStream" uid="uid://c4hkpk72tp1gy" path="res://SFX/Musics/Hidden_Tresor_GameOver.mp3" id="8_6wshf"]
[ext_resource type="AudioStream" uid="uid://qpv2f3r60bcm" path="res://SFX/Musics/Hidden_Tresor_Main_Menu.mp3" id="9_batqe"]
[ext_resource type="AudioStream" uid="uid://cjwl06cgguun1" path="res://SFX/Sounds/253168__suntemple__sfx-ui-button-click.mp3" id="10_msvle"]
[ext_resource type="AudioStream" uid="uid://c0xwitir8kphl" path="res://SFX/Sounds/442903__qubodup__slash_1.mp3" id="11_gn2dt"]
[ext_resource type="AudioStream" uid="uid://bsrc571eih56g" path="res://SFX/Sounds/442769__qubodup__sword-hit.mp3" id="12_4very"]

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_1r2sy"]
stream_count = 3
stream_0/stream = ExtResource("2_yhoks")
stream_0/volume = -10.0
stream_1/stream = ExtResource("3_4yr6x")
stream_1/volume = -40.0
stream_2/stream = ExtResource("4_qlbh4")
stream_2/volume = -40.0

[node name="AudioManager" type="Node2D"]
script = ExtResource("1_y6pe1")

[node name="AudioMusicProcedural" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamSynchronized_1r2sy")

[node name="AmbientUnderWater" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3f04n")
volume_db = -10.0
bus = &"SFX"

[node name="AudioPickUpCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0omb1")
volume_db = -15.0

[node name="AudioVoice" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = &"SFX"

[node name="AudioAmbientOutdoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_cdd1e")

[node name="AudioGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6wshf")
volume_db = -10.0

[node name="AudioMainMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_batqe")

[node name="AudioSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_msvle")

[node name="AudioSlash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_gn2dt")
volume_db = -15.0
bus = &"SFX"

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_4very")
volume_db = -15.0
bus = &"SFX"
